<?xml version="1.0" encoding="utf-8"?>
<!--
     /* * Copyright (C) 2008 The Android Open Source Project * * Licensed 
	under the Apache License, Version 2.0 (the "License"); * you may not use 
	this file except in compliance with the License. * You may obtain a copy 
	of the License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless 
	required by applicable law or agreed to in writing, software * distributed 
	under the License is distributed on an "AS IS" BASIS, * WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. * See the License for 
	the specific language governing permissions and * limitations under the License. 
	*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="theme_box_name">Beauty Center</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="default_theme">Default_theme</string>
    <string name="title_activity_main">Theme</string>
    <string name="title_activity_setting">Settings</string>
    <string name="preferLock">Locker Enable</string>
    <string name="system_lock">System Lock</string>
    <string name="chooseLauncher">Select Launcher</string>
    <string name="clearLauncher">Clear the default Launcher</string>
    <string name="Launcher">Launcher</string>
    <string name="preferlockHomeTitle">Lock the HOME button</string>
    <string name="btnReturn">Back</string>
    <string name="btnShare">Share</string>
    <string name="bgSpace">Background</string>
    <string name="btnApply">Apply</string>
    <string name="btnApplyWallpaper">Apply Wallpaper</string>
    <string name="btnDownload">Get</string>
    <string name="btnInstall">Instal</string>
    <string name="textPreview">Preview</string>
    <string name="toastPreviewApply">Application%s has been successfully</string>
    <string name="btnLocalLock">Lock</string>
    <string name="btnLocalTheme">Theme</string>
    <string name="btnHotLock">Hot</string>
    <string name="btnSetting">Setting</string>
    <string name="shareSubject">Share theme</string>
    <string name="shareText">I am using CoCo Theme &quot;%s&quot;，You have to try</string>
    <string name="previewLockSize">Packet size: </string>
    <string name="previewLockAuther">author: </string>
    <string name="previewThemeSize">Theme size: </string>
    <string name="previewThemeAuther">author: </string>
    <string name="previewIntroduction">Description:</string>
    <string name="btnUninstall">Uninstall</string>
    <string name="textIntroduction">Introduction</string>
    <string name="textLockSize">Size</string>
    <string name="thumbImage">Thumbnail</string>
    <string name="textLock">Lock screen </string>
    <string name="textTheme"> Theme</string>
    <string name="bgTheme">Theme</string>
    <string name="textDownloading">%d%%</string>
    <string name="textPause">%d%%</string>
    <string name="soft_update_no">Already the newest version</string>
    <string name="soft_update_title">Software updates</string>
    <string name="soft_update_checking"> Checking for updates, please wait</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Later update</string>
    <string name="soft_updating">Being updated</string>
    <string name="internet_err">The network connection is not available, please check your network settings</string>
    <string name="internet_unusual">Network is unstable, please try again later</string>
    <string name="system_theme">System Theme</string>
    <string name="textSdCardNotPrepare">SD card not ready</string>
    <string name="sdcard_not_available">SD card not available, please check the connection</string>
    <string name="server_download_file_name">CoCo Locker</string>
    <string name="server_begin_download">Start download</string>
    <string name="server_download_finish">Download is complete, click to Install</string>
    <string name="server_download_fail">Download failed</string>
    <string name="server_downloading">Downloading...</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing...</string>
    <string name="pull_to_refresh_footer_release_label">Release to refresh</string>
    <string name="pull_to_refresh_footer_pull_label">Pull up to refresh</string>
    <string name="pull_to_refresh_footer_refreshing_label">Refreshing...</string>
    <string name="is_downloading"> Is downloading,please wait!</string>
    <string name="more">More</string>
    <string name="version_update">Version Update</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="server_downloadRecommend_file_name">%s</string>
    <string name="recommend">Recommend</string>
    <string name="memory_prompt">Download more than five, please delete the phone download apk file</string>
    <string name="textFont"> Font</string>
    <string name="textWallpaper"> Wallpaper</string>
    <string name="text_lcoal_Wallpapers">Wallpaper</string>
    <string name="text_lcoal_Fonts">Font</string>
    <string name="defaultFont">Default Font</string>
    <string name="changingWallpaper">Set wallpaper, please wait...</string>
    <string name="setwallpaper">Set wallpaper</string>
    <string name="btnBuy">Buy</string>
    <string name="theme_price">Price:%1$dRMB</string>
    <string name="Workspace_effect_list">Desktop</string>
    <string name="App_effect_list">Applist</string>
    <string name="textEffect"> Effect</string>
    <string name="reLoadApk">The download content loss, redownload.</string>
    <string name="textScene"> Scene</string>
    <string name="textWidget"> Widget</string>
    <string name="previewSize">Size:%1$dKB&#160;&#160;&#160;&#160;&#160;&#160;author:%2$s</string>
    <string name="btnLocalWidget">Widget</string>
    <string name="btnLocalScene">Scene</string>
    <string name="makesure_to_delete">Are you sure to delete?</string>
    <string name="delete_ok">OK</string>
    <string name="delete_cancel">Cancel</string>
    <string name="lockHome">Lock the HOME button</string>
    <string name="notify_downloading">Downloading </string>
    <string name="notify_add_download">Add %s to download</string>
    <string name="notify_pause_download">%s Pause download</string>
    <string name="notify_exception_download">Get download data exception,please check your network is ok!</string>
    <string name="toast_setwallpaper_success">Set wallpaper successed.</string>
    <string name="widget_local_click_toast">Long press the desktop conjured edit mode, you can drag it to the desktop.</string>
    <string name="has_bought">Purchased</string>
    <string name="wallpaper_static">Desktop wallpaper</string>
    <string name="wallpaper_live">Live wallpaper</string>
    <string name="applyfont">Apply font,please wait...</string>
    <string name="lock_wallpaper">Lock wallpaper</string>
    <string name="changeLockWallpaper">Set lock wallpaper,please wait...</string>
    <string name="download_enginer">Download enginer</string>
    <string name="unknown">Unknown</string>
    <string name="text_lcoal_operate">Local</string>
    <string name="text_hot_opertate">Hot</string>
    <string name="text_online_operate">Online</string>
    <string name="open_operate">Open</string>
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <string name="sdcar_full">SDCard is full.</string>
    <string name="shortcut">Competitive products</string>
    <string name="data_storage_is_full">Storage is full,apply fail.</string>
    <string name="apply_fail">Apply fail.</string>
    <string name="apply_ok">Apply success.</string>
    <string name="now_use">Be used</string>
    <string name="lock_apply_new_toast">Please go to Screen lock and select the Slide,then exit</string>
    <string name="gallery">Gallery</string>
    <string name="apply_to_desktop">Apply To DeskTop</string>
    <string name="apply_to_lockwallpaper">Apply To Lock</string>
    <string name="lockwallpaper_apply_tost">Current unlock not support change wallpaper</string>
    <string name="warn">Warning</string>
    <string name="no_remind_next_time">Next time no longer remind</string>
    <string name="exit">Exit</string>
    <string name="i_know">I know</string>
    <string name="can_not_uninstall">System Widget,No Uninstall</string>
    <string name="can_not_delete_wallpaper">Current wallpaper is using can not delete</string>
    <string name="disclaimer_dialog_info">\t\tUse personality center may be because access to the network traffic generated by fees, charged by operators to provide network services. \n\t\tThe public authority is a system permissions, the user will not involve personal privacy issues. \n\t\tWe will continue to enhance the product experience based on the analysis results and improve function.</string>
    <string name="setDesktopwallpaper">Set to home screen</string>
    <string name="setLockWallpaper">Set to lock screen</string>
    <string name="setBoth">Set both</string>

</resources>