<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clipView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/clipImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/clip_top_bg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_back"
            android:contentDescription="@string/btnReturn" >
        </ImageButton>

        <TextView
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="left|center_vertical"
            android:text="@string/gallery"
            android:textColor="@android:color/white"
            android:textSize="16dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:visibility="visible" >

        <Button
            android:id="@+id/setWallpaper_brzh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_blue"
            android:text="@string/btnApplyWallpaper"
            android:textColor="@drawable/applay_text_select"
            android:visibility="gone" />

        <Button
            android:id="@+id/setLockWallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:text="@string/apply_to_lockwallpaper"
            android:textColor="@drawable/applay_text_select" />

        <Button
            android:id="@+id/setDeskTopWallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:text="@string/apply_to_desktop"
            android:textColor="@drawable/applay_text_select" />
    </LinearLayout>

</RelativeLayout>