<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000" >

    <TextView
        android:id="@+id/deleteInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:gravity="left"
        android:text="@string/disclaimer_dialog_info"
        android:textColor="#BBBBBB"
        android:textSize="18dip" />

    <LinearLayout
        android:id="@+id/checkBoxButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteInfo"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="10dip"
            android:text="@string/no_remind_next_time"
            android:textColor="#FEFEFE"
            android:textSize="16dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxButton"
        android:background="#A1A1A1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textColor="#363636"
            android:textSize="16dip" />

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_know"
            android:textColor="#363636"
            android:textSize="16dip" />
    </LinearLayout>

</RelativeLayout>