<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/dialog_shape"
        android:gravity="center_vertical"
        android:text="@string/btnApplyWallpaper"
        android:textColor="#323232"
        android:textSize="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3" />

    <RadioGroup
        android:id="@+id/wallpaper_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape" >

        <RadioButton
            android:id="@+id/setWallpaper_radioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/brzh_setwallpaper_bg_btn_radio_selector"
            android:text="@string/setDesktopwallpaper"
            android:textColor="#323232"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#d3d3d3" />

        <RadioButton
            android:id="@+id/setLockWallpaper_radioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@null"
            android:drawableRight="@drawable/brzh_setwallpaper_bg_btn_radio_selector"
            android:text="@string/setLockWallpaper"
            android:textColor="#323232"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:background="#d3d3d3" />

        <RadioButton
            android:id="@+id/setBoth_radioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/brzh_setwallpaper_bg_btn_radio_selector"
            android:text="@string/setBoth"
            android:textColor="#323232"
            android:textSize="16dp" />
    </RadioGroup>

</LinearLayout>