<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wallpaper_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/previewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/clip_top_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_return"
            android:clickable="true"
            android:focusable="true"
            android:gravity="left|center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/returnView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fanhui"
                android:clickable="false"
                android:contentDescription="@string/btnReturn" >
            </ImageButton>

            <TextView
                android:id="@+id/wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/wallpaper"
                android:textColor="@android:color/white"
                android:textSize="16dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_delete"
            android:contentDescription="@string/btnReturn"
            android:visibility="visible" >
        </ImageButton>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/layoutDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:visibility="invisible" >

            <LinearLayout
                android:id="@+id/linearDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8.7dip"
                android:paddingRight="8.7dip"
                android:paddingTop="24dip" >

                <ProgressBar
                    android:id="@+id/progressBarDown"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10.7dip"
                    android:max="100"
                    android:minHeight="10.7dip"
                    android:progress="0"
                    android:progressDrawable="@drawable/progressbar_big_downloading" />

                <TextView
                    android:id="@+id/textDownPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/textDownloading"
                    android:textColor="#5fddfc"
                    android:textSize="12dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8.7dip"
                android:paddingRight="8.7dip"
                android:paddingTop="24dip" >

                <ProgressBar
                    android:id="@+id/progressBarPause"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10.7dip"
                    android:max="100"
                    android:minHeight="10.7dip"
                    android:progress="0"
                    android:progressDrawable="@drawable/progressbar_big_pause" />

                <TextView
                    android:id="@+id/textPausePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/textDownloading"
                    android:textColor="#fd2323"
                    android:textSize="12dip" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:background="@drawable/button_blue"
                android:text="@string/btnDownload"
                android:textColor="@drawable/applay_text_select"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnInstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:background="@drawable/button_blue"
                android:text="@string/btnInstall"
                android:textColor="@drawable/applay_text_select"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/setwallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btnApplyWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/button_blue"
                    android:text="@string/btnApplyWallpaper"
                    android:textColor="@drawable/applay_text_select"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnpreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/textPreview"
                    android:textColor="@drawable/applay_text_select"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/setdesktopwallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/apply_to_desktop"
                    android:textColor="@drawable/applay_text_select"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/setlockwallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_blue"
                    android:text="@string/apply_to_lockwallpaper"
                    android:textColor="@drawable/applay_text_select"
                    android:visibility="visible" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:background="@drawable/button_blue"
                android:text="@string/btnBuy"
                android:textColor="@drawable/applay_text_select"
                android:visibility="gone" />
        </RelativeLayout>
    </FrameLayout>

    <Gallery
        android:id="@+id/thumbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_marginBottom="5dip"
        android:spacing="0dip" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>